JDK-specific and build updates for JDK 9 support