@@ -105,6 +105,7 @@
                     <skip>${skip.compile}</skip>
                 </configuration>
             </plugin>
+
             <!-- Surefire -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -175,10 +176,6 @@
                     <excludePackageNames>org.jboss.modules._private</excludePackageNames>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -207,31 +204,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <!-- Profiles -->
-    <profiles>
-        <!--
-          Name: modularizedJdk
-          Descr: various workarounds activation for modularized JDK
-        -->
-        <profile>
-            <id>modularizedJdk</id>
-            <activation>
-                <jdk>9</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- java.activation module not active by default in JDK9
-                                 (like all other SE and EE shared technologies) -->
-                            <argLine>--add-modules java.activation</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
